--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,9 @@
     "cytoscape-qtip": "^2.5.2",
     "bootstrap": "^3.3.7",
     "grunt": "^1.0.1",
-    "bootstrap-select": "^1.12.2"
+    "bootstrap-select": "^1.12.2",
+    "cytoscape-panzoom": "^2.4.1",
+    "components-font-awesome": "^4.7.0"
   },
   "overrides": {
     "bootstrap": {
@@ -44,6 +46,12 @@
       "main": [
         "jquery.qtip.min.js",
         "jquery.qtip.min.css"
+      ]
+    },
+    "cytoscape-panzoom": {
+      "main": [
+        "cytoscape-panzoom.js",
+        "cytoscape.js-panzoom.css"
       ]
     }
   }
