--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,8 @@
     "grunt": "^1.0.1",
     "bootstrap-select": "^1.12.2",
     "cytoscape-panzoom": "^2.4.1",
-    "components-font-awesome": "^4.7.0"
+    "components-font-awesome": "^4.7.0",
+    "seiyria-bootstrap-slider": "^9.7.3"
   },
   "overrides": {
     "bootstrap": {
