--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,8 @@
     "bootstrap-select": "^1.12.2",
     "cytoscape-panzoom": "^2.4.1",
     "components-font-awesome": "^4.7.0",
-    "seiyria-bootstrap-slider": "^9.7.3"
+    "seiyria-bootstrap-slider": "^9.7.3",
+    "papaparse": "^4.2.0"
   },
   "overrides": {
     "bootstrap": {
