--- a/bower.json
+++ b/bower.json
@@ -29,8 +29,7 @@
     "cytoscape-panzoom": "^2.4.1",
     "components-font-awesome": "^4.7.0",
     "seiyria-bootstrap-slider": "^9.7.3",
-    "papaparse": "^4.2.0",
-    "cytoscape-cose-bilkent": "^1.6.14"
+    "papaparse": "^4.2.0"
   },
   "overrides": {
     "bootstrap": {
