--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,9 @@
     "cytoscape-panzoom": "^2.4.1",
     "components-font-awesome": "^4.7.0",
     "seiyria-bootstrap-slider": "^9.7.3",
-    "papaparse": "^4.2.0"
+    "papaparse": "^4.2.0",
+    "datatables.net": "^1.10.15",
+    "datatables.net-dt": "^3.2.2"
   },
   "overrides": {
     "bootstrap": {
