--- a/bower.json
+++ b/bower.json
@@ -31,7 +31,8 @@
     "seiyria-bootstrap-slider": "^9.7.3",
     "renderjson": "https://raw.githubusercontent.com/caldwell/renderjson/master/renderjson.js",
     "font-awesome": "^5.0.13",
-    "FileSaver.min": "https://raw.githubusercontent.com/Teleborder/FileSaver.js/master/FileSaver.min.js"
+    "FileSaver.min": "https://raw.githubusercontent.com/Teleborder/FileSaver.js/master/FileSaver.min.js",
+    "bootstrap-toggle": "^2.2.2"
   },
   "overrides": {
     "bootstrap": {
